--- a/整体框架/demo01.html
+++ b/整体框架/demo01.html
@@ -3,13 +3,85 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="aQuery.js"></script>
+    <script src="../lib/aQuery.js"></script>
+    <script src="../lib/jquery-1.11.2.js"></script>
 </head>
 <body>
+    <ul>
+        <li>
+            <h3>
+                总结
+            </h3>
+        </li>
+        <li>
+            1.通过new jQuery.fn.init() 构建一个新的对象，拥有init构造器的prototype原型对象的方法，通过更改prototype.init.prototype=prototype
+        </li>
+        <li>
+            2.链式调用
+        </li>
+        <li>
+            3.插件接口
+        </li>
+    </ul>
     <script>
-        //
+        //最普通
+        var a=new aQuery();
+        console.log(a);
 
+        aQuery.extend({
+            sayHello:function(){
+                console.log("hello world");
+            }
+        });
 
+       aQuery.sayHello();
+
+       var a= aQuery().extend({
+            getAge:function(){
+                console.log(this.age);
+                return this;
+            },
+            deepCopy:{
+                test:"1",
+                test1:"2"
+            }
+        }).getAge();//返回的是aQuery的原型
+
+        var a=aQuery.extend();
+        console.log(a);
+
+        var b=aQuery.extend({
+            test:"test"
+        })
+        console.log(b.test);
+
+        var arr={test:"test"}
+        var c=aQuery.extend({},arr)
+        arr.test="test1";
+
+        console.log(c);
+
+        var d=aQuery().extend(true,{age:1111},{test:arr});
+
+        console.log(d.test)
+
+        var $a=$.extend();
+        console.log($a);
+
+        var $b= $.extend({
+            test:"test"
+        })
+        console.log($b);
+
+        var $d= $.extend({},arr)
+        arr.test="test2";
+        console.log($d);
+
+        var $c= $.extend(true,{},{test:arr
+        })
+
+        console.log($c.test);
     </script>
+
 </body>
 </html>
