--- a/DOM/demo01.html
+++ b/DOM/demo01.html
@@ -3,13 +3,54 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <style></style>
 </head>
 <body>
-    <div id="div1"></div>
+    <p id="intro">My first paragraph...</p>
+
+
+    <ul>
+        <li>List item 1</li>
+        <li>List item 1</li>
+        <li>List item 1</li>
+        <li>List item 1</li>
+        <li>List item 1</li>
+    </ul>
     <script>
-        var div1=document.getElementById("div1")
-                console.log(div1.nodeName)
-                console.log(div1.nodeType)
+        //深入理解dom http://www.cnblogs.com/TomXu/archive/2012/02/17/2351938.html
+        //访问dom节点
+        var intro=document.getElementById("intro");
+        console.dir(intro.getAttribute("id"))
+        console.dir(intro.firstChild);
+        console.dir(intro.childNodes)
+        console.dir(intro.parentNode);
+        var a=getNextElement(intro);
+        console.log(a);
+
+        var lis=document.getElementsByTagName("li");
+        console.dir(lis);
+
+
+        function getNextElement(Node){
+            if(Node.nextSibling.nodeType==1){
+                return Node.nextSibling;
+
+            }else{
+                getNextElement(Node.nextSibling);
+            }
+        }
+
+
+        //操作元素
+        intro.style.color="#fff";
+        intro.style.backgroundColor ="black"
+        intro.style.b="1px solid #333";
+
+        //动态修改样式 http://www.cnblogs.com/micromouse/archive/2010/04/26/1721618.html
+        //CSSStyleSheet
+        $("div").delegate()
+
+
     </script>
 </body>
 </html>
