--- a/DOM/demo01.html
+++ b/DOM/demo01.html
@@ -44,11 +44,11 @@
         //操作元素
         intro.style.color="#fff";
         intro.style.backgroundColor ="black"
-        intro.style.b="1px solid #333";
+        //intro.style.b="1px solid #333";
 
         //动态修改样式 http://www.cnblogs.com/micromouse/archive/2010/04/26/1721618.html
         //CSSStyleSheet
-        $("div").delegate()
+
 
 
     </script>
